<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    tools:context=".EditActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/imageBefore"
                android:layout_width="350dp"
                android:layout_height="250dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
            <TextView
                android:id="@+id/tv_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_action"
                android:textColor="@android:color/black"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@id/imageBefore"
                app:layout_constraintBottom_toTopOf="@id/scrollbutton"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
            <HorizontalScrollView
                android:id="@+id/scrollbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_action"
                app:layout_constraintBottom_toTopOf="@id/imageAfter"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/button_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rotate"
                        android:layout_margin="5dp"
                        style="@style/Widget.AppCompat.Button.Colored"/>

                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/button_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/flip"
                        android:layout_margin="5dp" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/button_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/smoothen"
                        android:layout_margin="5dp" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/button_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sharpen"
                        android:layout_margin="5dp" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/button_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mean_removal"
                        android:layout_margin="5dp" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/button_6"
                        android:text="@string/emboss"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/button_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/engraving"
                        android:layout_margin="5dp" />
                </LinearLayout>

            </HorizontalScrollView>
            <ImageView
                android:id="@+id/imageAfter"
                android:layout_width="350dp"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/scrollbutton"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageAfter"
                app:layout_constraintBottom_toTopOf="@id/code_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/how_to_do_that_jump_to_the_code"
                android:textColor="@android:color/black"
                android:layout_margin="8dp"/>

            <io.github.kbiakov.codeview.CodeView
                android:id="@+id/code_view"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageAfter" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
